<resources>
    <string name="app_name" translatable="false">Android-clean-architecture-jetpack</string>

    <!-- Main Activity -->
    <string name="main_home_menu_title">Home</string>
    <string name="main_schedule_menu_title">Schedule</string>
    <string name="main_agenda_menu_title">Agenda</string>
    <string name="main_map_menu_title">Map</string>
    <string name="main_info_menu_title">Info</string>
    <string name="main_setting_menu_title">Setting</string>
    <string name="main_logout_menu_title">Logout</string>

    <!-- Home fragment -->
    <string name="home_title">Home</string>

    <!-- Schedule fragment -->
    <string name="schedule_title">Schedule</string>

    <!-- Agenda fragment -->
    <string name="agenda_title">Agenda</string>

    <!-- Map fragment -->
    <string name="map_title">Map</string>

    <!-- Info fragment -->
    <string name="info_title">Information</string>

    <!-- Setting fragment -->
    <string name="setting_title">Setting</string>

    <!-- Sign in dialog -->
    <string name="sign_in_welcome_message">Welcome</string>
    <string name="sign_in_manage_google_account_action">Manage your Google account</string>
    <string name="sign_in_add_account_action">Add another account</string>
    <string name="sign_in_manage_account_on_device_action">Manage accounts on this device</string>
    <string name="sign_in_privacy_policy">Privacy Policy</string>
    <string name="sign_in_term_of_service">Terms of Service</string>

    <!-- Setting fragment -->
    <string name="setting_category_display">Display</string>
    <string name="setting_item_theme">Theme</string>
    <string name="setting_item_theme_default">Default</string>
    <string name="setting_category_sound">Sound</string>
    <string name="setting_item_notify">Notification</string>
    <string name="setting_category_help">Help</string>
    <string name="setting_item_term_of_use">Term of Service</string>
    <string name="setting_item_voted">Vote</string>
    <string name="setting_item_version">Version</string>
    <string name="setting_item_feedback">Feedback</string>
    <string name="setting_item_language">Language</string>
    <string name="setting_item_language_en">English - United State</string>
    <string name="setting_item_language_vi">Vietnamese</string>

    <!-- Setting theme fragment -->
    <string name="setting_theme_title">Choose Theme</string>
    <string name="setting_theme_light">Light</string>
    <string name="setting_theme_dark">Dark</string>
    <string name="setting_theme_system">System</string>
    <string name="setting_theme_battery_save">Set by Battery save</string>

    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="login_input_null_or_empty">Username and password is not empty.</string>
    <string name="msg_remember_login">Remember login</string>

    <string name="retry">Retry</string>
    <string name="update">Update</string>
    <string name="no_thank">No, thanks</string>
    <string name="connection_interrupted">Connection interrupted</string>
    <string name="try_later">Try later</string>
    <string name="logout">Log out</string>
    <string name="login_fail">Username or password incorrect, please try again!</string>

    <string name="notification">Notification</string>
    <string name="data_empty">The data is not exists or empty</string>
    <string name="server_maintenance">Server maintenance</string>
    <string name="server_maintenance_message">The app will be available after the maintenance is complete</string>
    <string name="no_internet">No internet connection</string>
    <string name="connection_timeout">The connection has time out</string>
    <string name="new_version_app">New version available</string>
    <string name="new_version_app_message">Please, update app to new version to continue using</string>
    <string name="logout_message">You will be returned to the login screen</string>

    <string name="title_error_login">Login Error</string>
</resources>
