<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_first_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home_dest"
            android:contentDescription="@string/main_home_menu_title"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/main_home_menu_title" />

        <item
            android:id="@+id/schedule_dest"
            android:contentDescription="@string/main_schedule_menu_title"
            android:icon="@drawable/ic_nav_schedule"
            android:title="@string/main_schedule_menu_title" />

        <item
            android:id="@+id/map_dest"
            android:contentDescription="@string/main_map_menu_title"
            android:icon="@drawable/ic_nav_map"
            android:title="@string/main_map_menu_title" />
    </group>

    <group
        android:id="@+id/nav_second_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/info_dest"
            android:contentDescription="@string/main_info_menu_title"
            android:icon="@drawable/ic_nav_info"
            android:title="@string/main_info_menu_title" />

        <item
            android:id="@+id/setting_dest"
            android:contentDescription="@string/main_setting_menu_title"
            android:icon="@drawable/ic_nav_setting"
            android:title="@string/main_setting_menu_title" />
    </group>
</menu>
