<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.andrdoidlifelang.presentation.ui.signin.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <LinearLayout
            android:id="@+id/container_user_and_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/img_user_avatar"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/sign_in_welcome_message"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                tools:text="user@gmail.com" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_user_avatar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="@id/container_user_and_email"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/container_user_and_email"
            app:srcCompat="@drawable/ic_default_user_avatar" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="container_user_and_email, img_user_avatar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_manage_account"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_manage_google_account_action"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorSecondary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            app:rippleColor="?attr/colorControlHighlight"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialComponents.Chip" />

        <View
            android:id="@+id/divider_first"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/list_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_manage_account" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_another_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/divider_first"
            tools:itemCount="2"
            tools:listitem="@layout/item_user_account" />

        <LinearLayout
            android:id="@+id/container_add_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/list_another_account">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_add_account" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/sign_in_add_account_action"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_manage_account_on_device"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/container_add_account">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_manage_account_on_device" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_add_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/sign_in_manage_account_on_device_action"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:id="@+id/divider_second"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/list_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_manage_account_on_device" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_privacy_policy"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_privacy_policy"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/img_small_bullet"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/divider_second"
            app:rippleColor="?attr/colorControlHighlight" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_small_bullet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/bt_privacy_policy"
            app:layout_constraintEnd_toStartOf="@id/bt_term_of_service"
            app:layout_constraintStart_toEndOf="@id/bt_privacy_policy"
            app:layout_constraintTop_toTopOf="@id/bt_privacy_policy"
            app:srcCompat="@drawable/bg_small_bullet" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_term_of_service"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_term_of_service"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/img_small_bullet"
            app:layout_constraintTop_toBottomOf="@id/divider_second"
            app:rippleColor="?attr/colorControlHighlight" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
